Created a utility namedFull Bleed that makes your component 100% of the viewport’s width

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Melbourne Substance Use Clininc</title>
 </head>
 <body>
-    <h1>Melbourne Substance Use Clinic</h1>
+    <h1 class="wrapper">Melbourne Substance Use Clinic</h1>
+    <p class="wrapper">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 </body>
 </html>
