started the Hero section

--- a/index.html
+++ b/index.html
@@ -128,7 +128,14 @@
                     <li><a href="#consultations">CONSULTATIONS</a></li>
                     <li class="nav__button"><a href="#contact-us" class="nav__button--a">CONTACT US</a></li>
                 </ul>
-        </nav>
     </header>
+
+    <section class="hero">
+        <h1 class="heading__primary">
+            Psychological reatment for substance use disorders
+        </h1>
+    </section>
+
+
 </body>
 </html>
