--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--GOOGLE FONTS-->
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/sass/main.css">
     <title>Melbourne Substance Use Clininc</title>
 </head>
 <body>
@@ -125,8 +125,8 @@
                     <li><a href="#about-us.html">ABOUT US</a></li>
                     <li><a href="#referral-pathways.html">REFERRAL PATHWAYS</a></li>
                     <li><a href="#programs.html">TREATMENT PROGRAMS</a></li>
-                    <li><a href="#consultations">CONSULTATIONS</a></li>
-                    <li class="nav__button"><a href="#contact-us" class="nav__button--a">CONTACT US</a></li>
+                    <li><a href="#consultations">ONLINE CONSULTATIONS</a></li>
+                    <li class="btn__secondary btn__secondary--nav"><a href="#contact-us" class="btn__secondary--nav--a">CONTACT US</a></li>
                 </ul>
     </header>
 
@@ -136,7 +136,7 @@
                 Psychological treatment for substance use disorders
             </h1>
 
-            <a href="#" class="btn btn--medium">LEARN MORE</a>
+            <a href="#" class="btn__primary btn__primary--medium">LEARN MORE</a>
         </div>
        
     </section>
