Created the Sass file architecture with partil files and added the alert and intro sections

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--GOOGLE FONTS-->
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/sass/main.css">
+    <link rel="stylesheet" href="/css/style.css">
     <title>Melbourne Substance Use Clininc</title>
 </head>
 <body>
@@ -140,8 +140,34 @@
         </div>
        
     </section>
-   
+    <section class="alert">
+        <div class="alert__box">
+            <p class="alert__text">In response to COVID-19, 
+                <span><a href="#" class="alert__text--a">online consultations</a></span> are available via ZOOM or Skype!</p>
+        </div>
+    </section>
 
+    <main class="main">
+        <section class="wrapper home__intro">
+            <h2 class="home__intro__heading">    MELBOURNE SUBSTANCE USE CLINIC
+            </h2>
+            <p class="home__intro__text">The MSUC was founded in 2020 by a small, multidisciplinary team of clinicians (registered psychologists, nurse practitioners, etc.), who have been supporting people with substance dependence over the years. </p>
+
+            <a href="#" class="btn__secondary u-margin__top--small">LEARN MORE</a>
+        </section>
+
+        <section class="wrapper featured__container">
+            <div class="featured__item">
+                <img src="img/what-is-hypnosis-normal.jpg" alt="man in altered states of consciousness" class="featured__image">
+            </div>
+            <div class="featured__item">
+
+            </div> 
+        </section>
+
+
+    </main>
+   
 
 </body>
 </html>
