Working on featured section

--- a/index.html
+++ b/index.html
@@ -153,15 +153,20 @@
             </h2>
             <p class="home__intro__text">The MSUC was founded in 2020 by a small, multidisciplinary team of clinicians (registered psychologists, nurse practitioners, etc.), who have been supporting people with substance dependence over the years. </p>
 
-            <a href="#" class="btn__secondary u-margin__top--small">LEARN MORE</a>
+            <a href="#" class="btn__secondary u-margin__top--medium">LEARN MORE</a>
         </section>
 
-        <section class="wrapper featured__container">
+        <section class="wrapper featured__container u-margin__top--small">
             <div class="featured__item">
                 <img src="img/what-is-hypnosis-normal.jpg" alt="man in altered states of consciousness" class="featured__image">
             </div>
             <div class="featured__item">
-
+                <svg class="featured__icon">
+                    <use xlink:href="img/sprite.svg#icon-what-is-hypnozis"></use>
+                </svg>
+                <h3 class="featured__title">What is Hypnosis</h3>
+                <p class="featured__text">As a matter of fact, we all experience altered states of consciousness in our day to day lives, in the form of daydreaming, focused attention, or deep concentration.</p>
+                <a href="#" class="btn__secondary u-margin__top--medium">LEARN MORE</a>
             </div> 
         </section>
 
