Finished the featured section

--- a/index.html
+++ b/index.html
@@ -146,32 +146,58 @@
                 <span><a href="#" class="alert__text--a">online consultations</a></span> are available via ZOOM or Skype!</p>
         </div>
     </section>
+    
+    <section class="wrapper home__intro">
+        <h2 class="home__intro__heading">    MELBOURNE SUBSTANCE USE CLINIC
+        </h2>
+        <p class="home__intro__text">The MSUC was founded in 2020 by a small, multidisciplinary team of clinicians (registered psychologists, nurse practitioners, etc.), who have been supporting people with substance dependence over the years. </p>
 
-    <main class="main">
-        <section class="wrapper home__intro">
-            <h2 class="home__intro__heading">    MELBOURNE SUBSTANCE USE CLINIC
-            </h2>
-            <p class="home__intro__text">The MSUC was founded in 2020 by a small, multidisciplinary team of clinicians (registered psychologists, nurse practitioners, etc.), who have been supporting people with substance dependence over the years. </p>
+        <a href="#" class="btn__secondary u-margin__top--medium">LEARN MORE</a>
+    </section>
 
-            <a href="#" class="btn__secondary u-margin__top--medium">LEARN MORE</a>
-        </section>
-
-        <section class="wrapper featured__container u-margin__top--small">
-            <div class="featured__item">
+    <section class="wrapper featured u-margin__top--small">
+        <div class="featured__item">
                 <img src="img/what-is-hypnosis-normal.jpg" alt="man in altered states of consciousness" class="featured__image">
-            </div>
-            <div class="featured__item">
+        </div>
+        <div class="featured__item">
                 <svg class="featured__icon">
                     <use xlink:href="img/sprite.svg#icon-what-is-hypnozis"></use>
                 </svg>
-                <h3 class="featured__title">What is Hypnosis</h3>
+                <h3 class="featured__title u-margin__bottom--small">What is Hypnosis</h3>
                 <p class="featured__text">As a matter of fact, we all experience altered states of consciousness in our day to day lives, in the form of daydreaming, focused attention, or deep concentration.</p>
                 <a href="#" class="btn__secondary u-margin__top--medium">LEARN MORE</a>
-            </div> 
-        </section>
+        </div> 
+    </section>
 
+    <section class="wrapper featured u-margin__top--large">
+        <div class="featured__item">
+                <svg class="featured__icon">
+                    <use xlink:href="img/sprite.svg#icon-referal-pathways"></use>
+                </svg>
+                <h3 class="featured__title u-margin__bottom--small">Referral Pathways and Assessment Process</h3>
+                <p class="featured__text">You can refer yourself to the MSUC, however a referral from other treatment providers (GP, psychiatrist, etc.) is also possible.</p>
+                <a href="#" class="btn__secondary u-margin__top--medium u-margin__bottom--medium">LEARN MORE</a>
+        </div> 
+        <div class="featured__item">
+            <img src="img/referral-pathways-normal.jpg" alt="referral pathways" class="featured__image">
+    </div>
+    </section>
 
-    </main>
+    <section class="wrapper featured u-margin__top--large">
+        <div class="featured__item">
+                <img src="img/private-outpatiente-normal.jpg" alt="private outpatient recovery program" class="featured__image">
+        </div>
+        <div class="featured__item">
+                <svg class="featured__icon">
+                    <use xlink:href="img/sprite.svg#icon-private-outpatient"></use>
+                </svg>
+                <h3 class="featured__title u-margin__bottom--small">Private Outpatient Recovery Programs</h3>
+                <p class="featured__text">These programs have been specifically designed to provide the most effective chance for your success and recovery.</p>
+                <a href="#" class="btn__secondary u-margin__top--medium">LEARN MORE</a>
+        </div> 
+    </section>
+
+    
    
 
 </body>
