--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
     </section>
     
     <section class="wrapper home__intro">
-        <h2 class="home__intro__heading">    MELBOURNE SUBSTANCE USE CLINIC
+        <h2 class="home__intro__heading u-margin__top--small">    MELBOURNE SUBSTANCE USE CLINIC
         </h2>
         <p class="home__intro__text">The MSUC was founded in 2020 by a small, multidisciplinary team of clinicians (registered psychologists, nurse practitioners, etc.), who have been supporting people with substance dependence over the years. </p>
 
@@ -183,7 +183,7 @@
     </div>
     </section>
 
-    <section class="wrapper featured u-margin__top--large">
+    <section class="wrapper featured u-margin__top--large u-margin__bottom--large">
         <div class="featured__item">
                 <img src="img/private-outpatiente-normal.jpg" alt="private outpatient recovery program" class="featured__image">
         </div>
@@ -191,12 +191,71 @@
                 <svg class="featured__icon">
                     <use xlink:href="img/sprite.svg#icon-private-outpatient"></use>
                 </svg>
-                <h3 class="featured__title u-margin__bottom--small">Private Outpatient Recovery Programs</h3>
+                <h2 class="featured__title u-margin__bottom--small">Private Outpatient Recovery Programs</h2>
                 <p class="featured__text">These programs have been specifically designed to provide the most effective chance for your success and recovery.</p>
                 <a href="#" class="btn__secondary u-margin__top--medium">LEARN MORE</a>
         </div> 
     </section>
 
+    <section class="contact">
+        <div class="wrapper contact__box">
+            <h3 class="home__intro__heading u-margin__bottom--small u-margin__top--small">Contact</h3>
+            <p class="contact__text">
+                Please send a brief text message with your name, phone number, a short description of your current issues, and availability for a short chat, and you will receive a call back ASAP.
+            </p>
+            <p class="contact__details u-margin__top--medium u-margin__bottom--medium">
+                M: 0426 696 377 <br>
+                info@melbsuclinic.com.au            
+            </p>
+
+            <a href="#" class="btn__primary btn__primary--medium u-margin__bottom--medium">CONTACT US</a>
+        </div>
+    </section>
+
+    <footer>
+        <div class="footer">
+            <div class="footer__item">
+                <ul class="footer__list">
+                    <li class="footer__list-item">
+                        <a href="#">About us</a>
+                    </li>
+                    <li class="footer__list-item">
+                        <a href="#">What is Hypnosis</a>
+                    </li>
+                    <li class="footer__list-item">
+                        <a href="#">Private Outpatient Recovery Programs</a>
+                    </li>
+                </ul>
+                <p class="footer__copyright">Copyright ©2020&nbsp;|&nbsp;Melbourne Substance Use Clinic. Designed by <a href="https://ovlachi.com/" target="_blank">OVLACHI</a>
+                     </p>
+            </div>
+
+            <div class="footer__item">
+                <img src="img/MSUC-logo-version-WHITE.png" alt="MSUC logo hite" class="footer__logo">
+            </div>
+
+            <div class="footer__item">
+                <ul class="footer__list">
+                    <li class="footer__list-item">
+                        <a href="#">ONLINE CONSULTATION</a>
+                    </li>
+                    <li class="footer__list-item">
+                        <a href="#">CONTACT US</a>
+                    </li>
+                    <li class="footer__list-item">
+                        <a href="#">PRIVACY AND CONFIDENTIALITY</a>
+                    </li>
+                </ul>
+                <svg class="footer__icon">
+                <a href="https://www.facebook.com/Melbourne-Substance-Use-Clinic-MSUC-114898983396330/" target="_blank">
+                    <use xlink:href="img/sprite.svg#icon-facebook2"></use>
+               </svg> </a>
+                <svg class="footer__icon">
+                <a href="https://www.instagram.com/melbourne_substance_use_clinic/" target="_blank"><use xlink:href="img/sprite.svg#icon-instagram"></use>
+                </a></svg>
+            </div>
+        </div>
+    </footer>
     
    
 
