Finished Home page

--- a/index.html
+++ b/index.html
@@ -205,8 +205,8 @@
             </p>
             <p class="contact__details u-margin__top--medium u-margin__bottom--medium">
                 M: 0426 696 377 <br>
-                info@melbsuclinic.com.au            
-            </p>
+            info@melbsuclinic.com.au
+        </p>
 
             <a href="#" class="btn__primary btn__primary--medium u-margin__bottom--medium">CONTACT US</a>
         </div>
@@ -226,7 +226,7 @@
                         <a href="#">Private Outpatient Recovery Programs</a>
                     </li>
                 </ul>
-                <p class="footer__copyright">Copyright ©2020&nbsp;|&nbsp;Melbourne Substance Use Clinic. Designed by <a href="https://ovlachi.com/" target="_blank">OVLACHI</a>
+                <p class="footer__copyright">Copyright ©2020&nbsp;|&nbsp;Melbourne Substance Use Clinic. Designed by <a href="https://ovlachi.com/" target="_blank">ovlachi</a>
                      </p>
             </div>
 
@@ -249,7 +249,7 @@
                 <svg class="footer__icon">
                 <a href="https://www.facebook.com/Melbourne-Substance-Use-Clinic-MSUC-114898983396330/" target="_blank">
                     <use xlink:href="img/sprite.svg#icon-facebook2"></use>
-               </svg> </a>
+                </a></svg>
                 <svg class="footer__icon">
                 <a href="https://www.instagram.com/melbourne_substance_use_clinic/" target="_blank"><use xlink:href="img/sprite.svg#icon-instagram"></use>
                 </a></svg>
