--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                 <label class="menu__icon" for="menu__btn"><span class="nav__icon"></span></label>
             
                 <ul class="menu">
-                    <li><a href="#about-us.html">ABOUT US</a></li>
+                    <li><a href="about.html">ABOUT US</a></li>
                     <li><a href="#referral-pathways.html">REFERRAL PATHWAYS</a></li>
                     <li><a href="#programs.html">TREATMENT PROGRAMS</a></li>
                     <li><a href="#consultations">ONLINE CONSULTATIONS</a></li>
@@ -153,7 +153,7 @@
         </h2>
         <p class="home__intro__text">The MSUC was founded in 2020 by a small, multidisciplinary team of clinicians (registered psychologists, nurse practitioners, etc.), who have been supporting people with substance dependence over the years. </p>
 
-        <a href="#" class="btn__secondary u-margin__top--medium">LEARN MORE</a>
+        <a href="about.html" class="btn__secondary u-margin__top--medium">LEARN MORE</a>
     </section>
 
     <section class="wrapper featured u-margin__top--small">
@@ -209,6 +209,22 @@
             info@melbsuclinic.com.au
         </p>
 
+        <form name="contact" method="POST" data-netlify="true">
+            <p>
+              <label>Your Name: <input type="text" name="name" /></label>   
+            </p>
+            <p>
+              <label>Your Email: <input type="email" name="email" /></label>
+            </p>
+        
+            <p>
+              <label>Message: <textarea name="message"></textarea></label>
+            </p>
+            <p>
+              <button class="btn__primary btn__primary--medium u-margin__bottom--medium" type="submit">Send</button>
+            </p>
+          </form>
+
             <a href="#" class="btn__primary btn__primary--medium u-margin__bottom--medium">CONTACT US</a>
         </div>
     </section>
@@ -218,7 +234,7 @@
             <div class="footer__item">
                 <ul class="footer__list">
                     <li class="footer__list-item">
-                        <a href="#">About us</a>
+                        <a href="about.html">About us</a>
                     </li>
                     <li class="footer__list-item">
                         <a href="#">What is Hypnosis</a>
