--- a/about.html
+++ b/about.html
@@ -125,8 +125,8 @@
                 <label class="menu__icon" for="menu__btn"><span class="nav__icon"></span></label>
             
                 <ul class="menu">
-                    <li><a href="#about-us.html">ABOUT US</a></li>
-                    <li><a href="#referral-pathways.html">REFERRAL PATHWAYS</a></li>
+                    <li><a href="about.html">ABOUT US</a></li>
+                    <li><a href="referral -pathways.html">REFERRAL PATHWAYS</a></li>
                     <li><a href="#programs.html">TREATMENT PROGRAMS</a></li>
                     <li><a href="#consultations">ONLINE CONSULTATIONS</a></li>
                     <li class="btn__secondary btn__secondary--nav"><a href="#contact" class="btn__secondary--nav--a">CONTACT US</a></li>
@@ -197,17 +197,17 @@
                 <form class="form" name="contact" method="POST" data-netlify="true">
                     <div class="form__group">
                         <input type="text" class="form__input" id="name" placeholder="Full Name*" required>
-                        <label for="name" class="form__label">Full Name</label>
+                        <label for="name" class="form__label">Full Name*</label>
                     </div>
 
                     <div class="form__group">
                         <input type="email" class="form__input" id="email" placeholder="Email address*" required>
-                        <label for="email" class="form__label">Email address</label>
+                        <label for="email" class="form__label">Email address*</label>
                     </div>
 
                     <div class="form__group">
                         <input type="tel" class="form__input" id="phone" placeholder="Phone number (format: 0412345678)*" name="phone" maxlength="10" pattern="[0-9]{10}" required>
-                        <label for="phone" class="form__label">Phone number</label>
+                        <label for="phone" class="form__label">Phone number (format: 0412345678)*</label>
                     </div>
 
                     <div class="form__group">
@@ -234,7 +234,7 @@
                         <a href="what-is-hypnosis.html">What is Hypnosis</a>
                     </li>
                     <li class="footer__list-item">
-                        <a href="#">Private Outpatient Recovery Programs</a>
+                        <a href="#">Private Outpatient Treatment Programs</a>
                     </li>
                 </ul>
                 <p class="footer__copyright">Copyright ©2020&nbsp;|&nbsp;Melbourne Substance Use Clinic. Designed by <a href="https://ovlachi.com/" target="_blank">ovlachi</a>
