--- a/about.html
+++ b/about.html
@@ -126,9 +126,9 @@
             
                 <ul class="menu">
                     <li><a href="about.html">ABOUT US</a></li>
-                    <li><a href="referral -pathways.html">REFERRAL PATHWAYS</a></li>
-                    <li><a href="#programs.html">TREATMENT PROGRAMS</a></li>
-                    <li><a href="#consultations">ONLINE CONSULTATIONS</a></li>
+                    <li><a href="referral-pathways.html">REFERRAL PATHWAYS</a></li>
+                    <li><a href="treatment-programs.html">TREATMENT PROGRAMS</a></li>
+                    <li><a href="online-consultations.html">ONLINE CONSULTATIONS</a></li>
                     <li class="btn__secondary btn__secondary--nav"><a href="#contact" class="btn__secondary--nav--a">CONTACT US</a></li>
                 </ul>
     </header>
@@ -140,7 +140,7 @@
     <section class="alert">
         <div class="alert__box">
             <p class="alert__text">In response to COVID-19, 
-                <span><a href="#" class="alert__text--a">online consultations</a></span> are available via ZOOM or Skype!</p>
+                <span><a href="online-consultations.html" class="alert__text--a">online consultations</a></span> are available via ZOOM or Skype!</p>
         </div>
     </section>
 
@@ -234,7 +234,7 @@
                         <a href="what-is-hypnosis.html">What is Hypnosis</a>
                     </li>
                     <li class="footer__list-item">
-                        <a href="#">Private Outpatient Treatment Programs</a>
+                        <a href="treatment-programs.html">Private Outpatient Treatment Programs</a>
                     </li>
                 </ul>
                 <p class="footer__copyright">Copyright ©2020&nbsp;|&nbsp;Melbourne Substance Use Clinic. Designed by <a href="https://ovlachi.com/" target="_blank">ovlachi</a>
@@ -248,13 +248,13 @@
             <div class="footer__item">
                 <ul class="footer__list">
                     <li class="footer__list-item">
-                        <a href="#">ONLINE CONSULTATION</a>
+                        <a href="online-consultations.html">ONLINE CONSULTATION</a>
                     </li>
                     <li class="footer__list-item">
                         <a href="#contact">CONTACT US</a>
                     </li>
                     <li class="footer__list-item">
-                        <a href="#">PRIVACY AND CONFIDENTIALITY</a>
+                        <a href="privacy.html">PRIVACY AND CONFIDENTIALITY</a>
                     </li>
                 </ul>
                 <svg class="footer__icon">
