--- a/referral-pathways.html
+++ b/referral-pathways.html
@@ -126,30 +126,39 @@
             
                 <ul class="menu">
                     <li><a href="about.html">ABOUT US</a></li>
-                    <li><a href="referral -pathways.html">REFERRAL PATHWAYS</a></li>
+                    <li><a href="referral-pathways.html">REFERRAL PATHWAYS</a></li>
                     <li><a href="treatment-programs.html">TREATMENT PROGRAMS</a></li>
                     <li><a href="online-consultations.html">ONLINE CONSULTATIONS</a></li>
                     <li class="btn__secondary btn__secondary--nav"><a href="#contact" class="btn__secondary--nav--a">CONTACT US</a></li>
                 </ul>
     </header>
 
-    <section class="hero__hypnosis">
+    <section class="hero__referral">
         &nbsp;
     </section>
 
     <section class="alert">
         <div class="alert__box">
             <p class="alert__text">In response to COVID-19, 
-                <span><a href="#" class="alert__text--a">online consultations</a></span> are available via ZOOM or Skype!</p>
+                <span><a href="online-consultations.html" class="alert__text--a">online consultations</a></span> are available via ZOOM or Skype!</p>
         </div>
     </section>
 
     <section class="wrapper intro u-margin__bottom--large">
         <h3 class="featured__title u-margin__bottom--small">
-            WHAT IS HYPNOSIS?
+            REFERRAL PATHWAYS AND ASSESSMENT PROCESS
         </h3>
-        <p class="u-margin__bottom--small">The word hypnosis comes from the Greek work “hypnos”, meaning sleep, resulting from the physical appearance of one sleeping. It is however not sleep.</p>
-        <p class="u-margin__bottom--small">Hypnosis has multiple definitions. The 2014 revised definition of Hypnosis is:</p>
+        <p class="u-margin__bottom--small">You can refer yourself to the MSUC, however a referral from other treatment providers (GP, psychiatrist, etc.) is also possible.</p>
+        <p class="u-margin__bottom--small">Your treatment at our clinic starts with an <strong>initial consultation.</strong>
+        </p>
+        <p class="u-margin__bottom--small">The purpose of the initial consultation is to assess your specific treatment needs and determine whether our treatment programs are able to meet these.</p>
+        <p class="u-margin__bottom--small">This session usually takes up to 60-90 minutes.</p>
+        <p class="u-margin__bottom--small">Following the initial consultation we may administer a set of selected <strong>questionnaires, scales or tests.</strong> The time involved depends on the selected measures (usually 60-90 minutes).</p>
+        <p class="u-margin__bottom--small"><strong>Measuring your susceptibility</strong> to the hypnotic suggestions (using a standardized measure) is usually a core part of the assessment process.</p>
+        <p class="u-margin__bottom--small">After the initial consultation and the assessment sessions (this usually means having to attend three appointments altogether), we will determine whether our clinic/programs are the best treatment option for you at the moment.
+        </p>
+
+
     </section>
     
     <section class="contact" id="contact">
@@ -218,13 +227,13 @@
             <div class="footer__item">
                 <ul class="footer__list">
                     <li class="footer__list-item">
-                        <a href="#">ONLINE CONSULTATION</a>
+                        <a href="online-consultations.html">ONLINE CONSULTATION</a>
                     </li>
                     <li class="footer__list-item">
                         <a href="#contact">CONTACT US</a>
                     </li>
                     <li class="footer__list-item">
-                        <a href="#">PRIVACY AND CONFIDENTIALITY</a>
+                        <a href="privacy.html">PRIVACY AND CONFIDENTIALITY</a>
                     </li>
                 </ul>
                 <svg class="footer__icon">
