Finished the Treatment program section and Privacy section

--- a/privacy.html
+++ b/privacy.html
@@ -144,21 +144,16 @@
         </div>
     </section>
 
-    <section class="wrapper intro u-margin__bottom--large">
+    <section class="wrapper intro u-margin__top--medium u-margin__bottom--large">
         <h3 class="featured__title u-margin__bottom--small">
-            REFERRAL PATHWAYS AND ASSESSMENT PROCESS
+            PRIVACY AND CONFIDENTIALITY
         </h3>
-        <p class="u-margin__bottom--small">You can refer yourself to the MSUC, however a referral from other treatment providers (GP, psychiatrist, etc.) is also possible.</p>
-        <p class="u-margin__bottom--small">Your treatment at our clinic starts with an <strong>initial consultation.</strong>
-        </p>
-        <p class="u-margin__bottom--small">The purpose of the initial consultation is to assess your specific treatment needs and determine whether our treatment programs are able to meet these.</p>
-        <p class="u-margin__bottom--small">This session usually takes up to 60-90 minutes.</p>
-        <p class="u-margin__bottom--small">Following the initial consultation we may administer a set of selected <strong>questionnaires, scales or tests.</strong> The time involved depends on the selected measures (usually 60-90 minutes).</p>
-        <p class="u-margin__bottom--small"><strong>Measuring your susceptibility</strong> to the hypnotic suggestions (using a standardized measure) is usually a core part of the assessment process.</p>
-        <p class="u-margin__bottom--small">After the initial consultation and the assessment sessions (this usually means having to attend three appointments altogether), we will determine whether our clinic/programs are the best treatment option for you at the moment.
-        </p>
-
-
+        <p class="u-margin__bottom--small">All personal information gathered by our clinic is confidential – except in the following circumstances:</p>
+        <ul>
+            <li>Your information is subpoenaed by the court, and/or</li>
+            <li>Failure to disclose the information would place you or another person at risk; and/or:</li>
+            <li>Your prior written/verbal approval has been obtained to provide information to another health professional, treatment provider or 		agency (e,g, a GP, psychiatrist, etc.</li>
+        </ul>
     </section>
     
     <section class="contact" id="contact">
