--- a/referral-pathways.html
+++ b/referral-pathways.html
@@ -144,7 +144,7 @@
         </div>
     </section>
 
-    <section class="wrapper intro u-margin__bottom--large">
+    <section class="wrapper intro u-margin__top--medium u-margin__bottom--large">
         <h3 class="featured__title u-margin__bottom--small">
             REFERRAL PATHWAYS AND ASSESSMENT PROCESS
         </h3>
