--- a/treatment-programs.html
+++ b/treatment-programs.html
@@ -144,21 +144,66 @@
         </div>
     </section>
 
-    <section class="wrapper intro u-margin__bottom--large">
-        <h3 class="featured__title u-margin__bottom--small">
+    <section class="wrapper intro u-margin__bottom--small">
+        <h3 class="featured__title u-margin__top--medium u-margin__bottom--small">
           OUR PRIVATE OUTPATIENT RECOVERY PROGRAMS
         </h3>
+        <p class="u-margin__bottom--small">These programs have been specifically designed to provide the most effective chance for your success and recovery. With limited spaces in these individual programs, please contact us now for an initial appointment to secure your place.
+        </p>
+    </section>
+    
+    <section class="wrapper program u-margin__top--small u-margin__bottom--medium">
+        <div class="program__details">
+            <img src="img/strong-minds-466x240.jpg" alt="strong mind" class="program__image">
+            <div class="program__content">
+                <h3 class="program__title u-margin__bottom--small">Strong Mind
+                </h3>
+                <ul class="program__text">
+                    The goal of this program is: “Staying determined!” This 20 week outpatient program aims to support you in:
+                    <li>Gradually building inner strength and confidence, 	so that you don’t have to rely on substance use as a coping mechanism</li>
+                    <li>Learning hypno-relaxation as a way to manage 	withdrawal symptoms, anxiety, stress, and experience deep relaxation and calmness in a natural way</li>
+                    <li>Developing strategies to handle cravings and urges through imagery conditioning, etc.</li>
+                </ul>
+                <p class="program__price">
+                    PRICE: $4,600
+                </p>
+                <a href="#contact" class="btn__secondary btn__secondary--left u-margin__top--medium">Book now</a>
+            </div>
+
+        </div>
+        <div class="program__details">
+            <img src="img/resilience466x240.jpg" alt="resilient soul" class="program__image">
+            <div class="program__content">
+                <h3 class="program__title u-margin__bottom--small">Resilient Soul
+                </h3>
+                <ul class="program__text">
+                    The motto of this program is: “You have the power to change YOUR world”. This 30-week outpatient program aims to support you in:
+                    <li>Gradually building inner strength and confidence, 	so that you don’t have to rely on substance use as a coping mechanism</li>
+                    <li>Learning hypno-relaxation as a way to manage withdrawal symptoms, anxiety, stress, and experience deep relaxation and calmness in a natural way</li>
+                    <li>Working on the deeper levels of your personality so that you can access and work on healing the root causes of your current difficulties and struggles in life – one of which may be your alcohol/drug dependence.</li>
+                </ul>
+                <p class="program__price">
+                    PRICE: $6,900
+                </p>
+                <a href="#contact" class="btn__secondary btn__secondary--left u-margin__top--medium">Book now</a>
+            </div>
+        </div>
+    </section>
+
+    <section class="wrapper intro u-margin__bottom--large">
+        <h3 class="featured__title u-margin__bottom--small">
+            Please note:
+        </h3>
         <p class="u-margin__bottom--small">You can refer yourself to the MSUC, however a referral from other treatment providers (GP, psychiatrist, etc.) is also possible.</p>
-        <p class="u-margin__bottom--small">Your treatment at our clinic starts with an <strong>initial consultation.</strong>
+        <h3 class="featured__title u-margin__bottom--small">
+            Private Health Insurance
+        </h3>
+        <p class="u-margin__bottom--small">You may be able to claim a rebate through your private health insurer – please speak to your provider for rebate amounts.</p>
+        <h3 class="featured__title u-margin__bottom--small">
+            OTHER SERVICES
+        </h3>
+        <p class="u-margin__bottom--small">If you are actively using substances, you may need to be referred to your/a GP or a nurse practitioner to discuss the next steps in your treatment. Our clinic can assist with making the appropriate referrals for you. In case you need Medicare rebates or bulk billing, we can assist with linking you in with psychologists who offer similar services.
         </p>
-        <p class="u-margin__bottom--small">The purpose of the initial consultation is to assess your specific treatment needs and determine whether our treatment programs are able to meet these.</p>
-        <p class="u-margin__bottom--small">This session usually takes up to 60-90 minutes.</p>
-        <p class="u-margin__bottom--small">Following the initial consultation we may administer a set of selected <strong>questionnaires, scales or tests.</strong> The time involved depends on the selected measures (usually 60-90 minutes).</p>
-        <p class="u-margin__bottom--small"><strong>Measuring your susceptibility</strong> to the hypnotic suggestions (using a standardized measure) is usually a core part of the assessment process.</p>
-        <p class="u-margin__bottom--small">After the initial consultation and the assessment sessions (this usually means having to attend three appointments altogether), we will determine whether our clinic/programs are the best treatment option for you at the moment.
-        </p>
-
-
     </section>
     
     <section class="contact" id="contact">
