--- a/what-is-hypnosis.html
+++ b/what-is-hypnosis.html
@@ -144,7 +144,7 @@
         </div>
     </section>
 
-    <section class="wrapper intro">
+    <section class="wrapper intro u-margin__top--medium">
         <h3 class="featured__title u-margin__bottom--small">
             WHAT IS HYPNOSIS?
         </h3>
