Finished the Online consultation section

--- a/treatment-programs.html
+++ b/treatment-programs.html
@@ -159,7 +159,7 @@
                 <h3 class="program__title u-margin__bottom--small">Strong Mind
                 </h3>
                 <ul class="program__text">
-                    The goal of this program is: “Staying determined!” This 20 week outpatient program aims to support you in:
+                    The goal of this program is: <strong>“Staying determined!”</strong> This 20 week outpatient program aims to support you in:
                     <li>Gradually building inner strength and confidence, 	so that you don’t have to rely on substance use as a coping mechanism</li>
                     <li>Learning hypno-relaxation as a way to manage 	withdrawal symptoms, anxiety, stress, and experience deep relaxation and calmness in a natural way</li>
                     <li>Developing strategies to handle cravings and urges through imagery conditioning, etc.</li>
@@ -177,7 +177,7 @@
                 <h3 class="program__title u-margin__bottom--small">Resilient Soul
                 </h3>
                 <ul class="program__text">
-                    The motto of this program is: “You have the power to change YOUR world”. This 30-week outpatient program aims to support you in:
+                    The motto of this program is: <strong>“You have the power to change YOUR world”.</strong> This 30-week outpatient program aims to support you in:
                     <li>Gradually building inner strength and confidence, 	so that you don’t have to rely on substance use as a coping mechanism</li>
                     <li>Learning hypno-relaxation as a way to manage withdrawal symptoms, anxiety, stress, and experience deep relaxation and calmness in a natural way</li>
                     <li>Working on the deeper levels of your personality so that you can access and work on healing the root causes of your current difficulties and struggles in life – one of which may be your alcohol/drug dependence.</li>
