--- a/online-consultations.html
+++ b/online-consultations.html
@@ -2,12 +2,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--SEO-->
+    <!--SEO-User defined-->
+    <meta name="keywords" content="substance use, withdrawal symptoms, treatment programs, hypnosis, inner strength, confidence" />
+    <meta name="description" content="Melbourne Substance Use Clinic was founded in 2020, by a small, multidisciplinary team of clinicians, registered psychologists, nurse practitioners, who have been supporting people with substance dependence." />
+    <meta name="author" content="Melbourne Substance Use Clinic" />
+    <meta name="copyright" content="Melbourne Substance Use Clinic, 2020" />
     <meta name="robots" content="index, follow">
     <!--GOOGLE FONTS-->
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
-    <title>Melbourne Substance Use Clininc</title>
+    <title>Online Consultation - Melbourne Substance Use Clininc</title>
 </head>
 <body>
     <header class="header">
@@ -159,7 +163,7 @@
                 <ol class="program__text">
                     <li>You will receive an appointment confirmation email with the <strong>meeting URL</strong> after booking</li>
                     <li>Please click this URL to start the meeting, or you can <strong>“Sign-in” then select “Join”</strong> and enter meeting ID from the email received</li>
-                    <li>Ensure your device has a dedicated microphone and webcam.</li>
+                    <li>Ensure your device has microphone and webcam.</li>
                 </ol>
             </div>
 
@@ -178,11 +182,11 @@
                 <h3 class="program__title u-margin__bottom--small">USING SKYPE
                 </h3>
                 <ol class="program__text">
-                    <li>You will receive an appointment confirmation email with the meeting date and time and your counsellors <strong>skype name</strong></li>
+                    <li>You will receive an appointment confirmation email with the meeting date and time and your clinician's <strong>skype name</strong></li>
                     <li>After <strong>“Log-in”</strong>, click on the search bar at the top left hand corner of the Skype screen and 
-                    enter the skype name of your counsellor into the search bar
+                    enter the skype name of your clinician into the search bar
                   </li>
-                    <li><strong>Click</strong> on your counsellor’s profile</li>
+                    <li><strong>Click</strong> on your clinician's profile</li>
                     <li>To start the meeting, click on the video link button – the video camera icon near the top right hand side of the screen.
                     </li>
                 </ol>
