--- a/referral-pathways.html
+++ b/referral-pathways.html
@@ -2,12 +2,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--SEO-->
+    <!--SEO-User defined-->
+    <meta name="keywords" content="substance use, withdrawal symptoms, treatment programs, hypnosis, inner strength, confidence" />
+    <meta name="description" content="Melbourne Substance Use Clinic was founded in 2020, by a small, multidisciplinary team of clinicians, registered psychologists, nurse practitioners, who have been supporting people with substance dependence." />
+    <meta name="author" content="Melbourne Substance Use Clinic" />
+    <meta name="copyright" content="Melbourne Substance Use Clinic, 2020" />
     <meta name="robots" content="index, follow">
     <!--GOOGLE FONTS-->
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
-    <title>Melbourne Substance Use Clininc</title>
+    <title>Referral Pathways - Melbourne Substance Use Clininc</title>
 </head>
 <body>
     <header class="header">
